src/main/java/com/example/error/SongNotFoundException.java
package com.example.error;

public class SongNotFoundException extends RuntimeException{
}
